# pyhamlogger

./: .gitignore  README.md  pyproject.toml  requirements.txt
pyhamlogger/controllers/: log_controller.py
pyhamlogger/models/: log_entry.py
pyhamlogger/services/: database.py
pyhamlogger/ui/: main_window.py
pyhamlogger/views/: log_view.py
tests/: conftest.py  test_database.py  test_log_controller.py  test_main_window.py
